Basic docs pages

--- a/modules/docs/src/shared/components/layout/layout.component.html
+++ b/modules/docs/src/shared/components/layout/layout.component.html
@@ -1,4 +1,8 @@
 <div class="Layout">
+    <div class="Layout-header">
+        @{HeaderComponent()}
+    </div>
+
     <div class="Layout-content">
         @{DynamicComponent(content)}
     </div>
