--- a/modules/docs/src/shared/components/page/page.component.html
+++ b/modules/docs/src/shared/components/page/page.component.html
@@ -11,7 +11,7 @@
 <body>
 
 <main class="Page-content">
-    @{DynamicComponent(contentComponent)}
+    @{LayoutComponent(contentComponent)}
 </main>
 
 @{ScriptsComponent()}
