--- a/modules/docs/src/shared/components/layout/layout.component.html
+++ b/modules/docs/src/shared/components/layout/layout.component.html
@@ -1,6 +1,7 @@
 <div class="Layout">
     <div class="Layout-header">
         @{HeaderComponent()}
+        @{NavigationComponent()}
     </div>
 
     <div class="Layout-content">
