--- a/modules/docs/src/shared/components/header/header.component.html
+++ b/modules/docs/src/shared/components/header/header.component.html
@@ -1,9 +1,7 @@
 <header class="Header">
-    <div class="Header-logo">
+    <a href="/index.html" class="Header-logo">
         <img class="Header-image" src="/logo.png" alt="Getig documentation" />
-    </div>
+    </a>
 
     <h1 class="Header-title">Docs</h1>
-
-    <nav class="Header-nav">Nav</nav>
 </header>
