--- a/modules/docs/src/shared/components/layout/layout.component.scss
+++ b/modules/docs/src/shared/components/layout/layout.component.scss
@@ -1,3 +1,19 @@
 .Layout {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 
+  &-header {
+    width: 100%;
+  }
+
+  &-content {
+    background: #ffffff;
+    box-shadow: 0 0 5px 1px #333;
+    flex: 1 0 auto;
+    max-width: 700px;
+    padding: 20px;
+    width: 100%;
+  }
 }
