Tidy up main page styling

--- a/modules/docs/src/shared/components/header/header.component.html
+++ b/modules/docs/src/shared/components/header/header.component.html
@@ -1,7 +1,13 @@
+<div class="Header-spacer"></div>
+
 <header class="Header">
     <a href="/index.html" class="Header-logo">
         <img class="Header-image" src="/logo.png" alt="Getig documentation" />
     </a>
 
-    <h1 class="Header-title">Docs</h1>
+    <h1 class="Header-title">Documentation</h1>
+
+    <div class="Header-navigation">
+        @{NavigationComponent()}
+    </div>
 </header>
