--- a/modules/docs/src/shared/components/layout/layout.component.scss
+++ b/modules/docs/src/shared/components/layout/layout.component.scss
@@ -10,7 +10,8 @@
 
   &-content {
     background: #ffffff;
-    box-shadow: 0 0 5px 1px #333;
+    box-shadow: 0 0 5px 0 #333;
+    box-sizing: border-box;
     flex: 1 0 auto;
     max-width: 700px;
     padding: 20px;
