--- a/modules/docs/src/shared/components/module-nav/module-nav.component.scss
+++ b/modules/docs/src/shared/components/module-nav/module-nav.component.scss
@@ -1,8 +1,8 @@
 .ModuleNav {
-  background: #f0f0f0;
+  box-shadow: 0 0 5px 0 #ccc;
   display: flex;
   list-style: none;
-  justify-content: flex-end;
+  justify-content: center;
   margin: 0;
   padding: 0;
 }
