--- a/modules/docs/src/shared/components/module-nav-item/module-nav-item.component.html
+++ b/modules/docs/src/shared/components/module-nav-item/module-nav-item.component.html
@@ -1,3 +1,3 @@
 <li class="ModuleNavItem">
-    <a href="#{url}" class="ModuleNavItem-href">#{label}</a>
+    <a href="#{url}" class="ModuleNavItem-href" data-module-nav-item>#{label}</a>
 </li>
