--- a/modules/docs/src/shared/components/module-nav-item/module-nav-item.component.scss
+++ b/modules/docs/src/shared/components/module-nav-item/module-nav-item.component.scss
@@ -11,7 +11,7 @@
       outline: 1px #24598c inset;
     }
 
-    &:active {
+    &.is-active {
       background: #24598c;
       color: #f0f0f0;
     }
