--- a/modules/docs/src/shared/components/module-nav/module-nav.component.scss
+++ b/modules/docs/src/shared/components/module-nav/module-nav.component.scss
@@ -1,5 +1,7 @@
+@import "../../styles/index";
+
 .ModuleNav {
-  box-shadow: 0 0 5px 0 #ccc;
+  box-shadow: 0 0 5px 0 $color-shading-accent;
   display: flex;
   list-style: none;
   justify-content: center;
