Move font families to variables

--- a/modules/docs/src/shared/components/concept/concept.component.scss
+++ b/modules/docs/src/shared/components/concept/concept.component.scss
@@ -16,7 +16,7 @@
 
   &-title {
     color: $color-font-title;
-    font-family: "Century Gothic", sans-serif;
+    font-family: $font-family-title;
     font-size: 3.5rem;
     font-weight: 100;
     margin: 0;
