--- a/modules/docs/src/shared/components/page/page.component.scss
+++ b/modules/docs/src/shared/components/page/page.component.scss
@@ -1,7 +1,7 @@
 @import "../../styles/index";
 
 :root {
-  font-family: "open-sans", sans-serif;
+  font-family: $font-family-body;
   font-size: 100%;
 }
 
