--- a/modules/docs/src/shared/components/header/header.component.scss
+++ b/modules/docs/src/shared/components/header/header.component.scss
@@ -25,7 +25,7 @@
 
   &-title {
     flex: 1 0 auto;
-    font-family: "Century Gothic", sans-serif;
+    font-family: $font-family-title;
     font-size: 1rem;
     margin: 0;
     text-transform: uppercase;
