--- a/modules/docs/src/shared/components/concept/concept.component.scss
+++ b/modules/docs/src/shared/components/concept/concept.component.scss
@@ -17,8 +17,12 @@
   &-title {
     color: $color-font-title;
     font-family: $font-family-title;
-    font-size: 3.5rem;
+    font-size: 2rem;
     font-weight: 100;
     margin: 0;
+
+    @include media(600px) {
+      font-size: 3.5rem;
+    }
   }
 }
