Style markdown code blocks

--- a/modules/docs/src/shared/components/concept/concept.component.scss
+++ b/modules/docs/src/shared/components/concept/concept.component.scss
@@ -2,7 +2,7 @@
 
 .Concept {
   &-header {
-    background: $color-font-invert;
+    background: $color-background-accent;
     box-shadow: 0 0 5px 0 $color-shading;
   }
 
